--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -3,15 +3,16 @@ layout: default
 ---
 <div class="post">
   <header class="post-header">
-    <h1 class="post-title">
-      {% if site.title == 'blank' %}
+    {% if site.title == 'blank' %}
+      <h1 class="post-title">
         <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-        {{ site.last_name }} <span class="desc">{{ site.pronouns }}</span>
-      {% else %}
-        {{ site.title }}
-      {% endif %}
-    </h1>
-    <p class="desc">{{ page.subtitle }}</p>
+        {{ site.last_name }}
+      </h1>
+      <span>{{ site.pronouns }}</span>
+    {% else %}
+      <h1 class="post-title">{{ site.title }}</h1>
+    {% endif %}
+    <h3 class="desc">{{ page.subtitle }}</h3>
   </header>
 
   <article>
