--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -7,7 +7,7 @@ layout: default
       {% if site.title == 'blank' %}
         <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
         {{ site.last_name }}
-        <span class="fs-5">{{ site.pronouns }}</span>
+        <span class="font-size-sm">{{ site.pronouns }}</span>
       {% else %}
         {{ site.title }}
       {% endif %}
