--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -16,7 +16,8 @@
         {% if content[0] == 'url' %}
           <a href="{{ content[1] }}" target="_blank" rel="noopener noreferrer">{{ content[1] }}</a>
         {% elsif content[0] == 'email' %}
-          <a href="mailto:{{ content[1] }}" target="_blank">{{ content[1] }}</a>
+          {% assign email = content[1] | replace: ' (at) ', '@' | replace: ' (dot) ', '.' %}
+          <a href="mailto:{{ email }}" target="_blank">{{ content[1] }}</a>
         {% elsif content[0] == 'phone' %}
           <a href="tel:{{ content[1] }}">{{ content[1] }}</a>
         {% else %}
