--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -577,8 +577,12 @@ footer.sticky-bottom {
   }
 }
 
-.post-header > h1 { display: inline-block; }
-.post-header span { margin-left: 10px; }
+.post-header > h1 {
+  display: inline-block;
+}
+.post-header span {
+  margin-left: 10px;
+}
 
 .post-title {
   mjx-container[jax="CHTML"][display="true"] {
