--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -8,7 +8,7 @@ layout: default
         <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
         {{ site.last_name }}
       </h1>
-      <span>{{ site.pronouns }}</span>
+      <span class="ml-1">{{ site.pronouns }}</span>
     {% else %}
       <h1 class="post-title">{{ site.title }}</h1>
     {% endif %}
