updates projects, adds traveladvisory api documentation, deletes unused assets

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -16,7 +16,7 @@ layout: default
           rel="noopener noreferrer"
           class="float-right"
         >
-          <i class="fa-solid fa-file-pdf"></i>
+          <i class="fa-solid fa-file-pdf ml-1"></i>
         </a>
       {% endif %}
       {% if page.description %}
